<resources>
    <string name="app_name">Cinema aggregator</string>
    <string name="filtering_settings">Настойки фильтрации</string>
    <string name="search">Поиск</string>
    <string name="type_request">Введите запрос</string>
    <string name="poster">Постер</string>
    <string name="apply">Применить</string>
    <string name="cancel">Отмена</string>
    <string name="release_year">Год премьеры</string>
    <string name="age_rating">Возрастной рейтинг</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year_hint">1990-2007</string>
    <string name="age_rating_hint">12+</string>
    <string name="nothing_found">По вашему запросу ничего не найдено</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="check_internet_connection">Проверьте соединение с интернетом</string>
    <string name="not_selected">Не выбрано</string>
    <string name="information_not_found">информация отсутствует</string>
    <string name="production_year">Год \nпроизводства</string>
    <string name="director">Режиссер</string>
    <string name="operator">Оператор</string>
    <string name="duration">Длительность</string>
    <string name="rating">Рейтинг</string>
    <string name="actors">Актеры</string>
    <string name="reviews">Отзывы</string>
    <string name="episodes">Серии</string>
    <string name="photo">Фото</string>
    <string name="author">Автор:</string>
    <string name="back">назад</string>
    <string name="reviews_not_found">Отзывы отсутствуют</string>
    <string name="actors_not_found">Информация об актерах отсутствует</string>
    <string name="seasons_not_found">Информация о эпизодах отсутствует</string>
    <string name="rating_kp">Рейтинг кинопоиска</string>
    <string name="from_6">от 6</string>
</resources>